<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/MnOp1" android:title="@string/dias_semana">
        <menu>
            <item android:id="@+id/MnOp1_1" android:title="@string/lunes"/>
            <item android:id="@+id/MnOp1_2" android:title="@string/martes"/>
            <item android:id="@+id/MnOp1_3" android:title="@string/miercoles"/>
            <item android:id="@+id/MnOp1_4" android:title="@string/jueves"/>
            <item android:id="@+id/MnOp1_5" android:title="@string/viernes"/>
            <item android:id="@+id/MnOp1_6" android:title="@string/sabado"/>
            <item android:id="@+id/MnOp1_7" android:title="@string/domingo"/>
        </menu>
    </item>
    <item android:id="@+id/MnOp2" android:title="@string/meses_anyo">
        <menu>
            <item android:id="@+id/MnOp2_1" android:title="@string/enero"/>
            <item android:id="@+id/MnOp2_2" android:title="@string/febrero"/>
            <item android:id="@+id/MnOp2_3" android:title="@string/marzo"/>
            <item android:id="@+id/MnOp2_4" android:title="@string/abril"/>
        </menu>
    </item>
</menu>